Fix merge conflict & re-align inner-card content

--- a/snappaddy/templates/show_snap.html
+++ b/snappaddy/templates/show_snap.html
@@ -11,12 +11,12 @@
             </div>
             <div id="greeting-card-text" class="greeting-card text-center text-dark d-flex justify-content-center">
                 <div id="inner-card-content" class="d-block">
-                    <h1 class="my-2">
+                    <h3 class="my-2">
                         Happy St. Patrick's Day!
-                    </h1>
-                    <h2 class="text-dark">~ 2021 ~</h2>
+                    </h3>
+                    <h3 class="text-dark">~ 2021 ~</h3>
                     <div class="social-share">
-                        <p>Share your Paddy Snap with your friends!</p>
+                        <p>Share with your friends!</p>
 
                         <!-- insert template tag for snap id after url ==> https://snap-paddy.herokuapp.com/show/ =>123456789<= -->
                         <a class="btn btn-outline-primary btn-lg"
