add preserve3d to running animations

--- a/snappaddy/templates/paddy_snap.html
+++ b/snappaddy/templates/paddy_snap.html
@@ -5,8 +5,8 @@
 
 
 <!-- COMMENTED OUT THE INTRO ANIMATION FOR NOW -->
-<!-- 
-<div id="intro-animation" class="container-fluid">
+
+<!-- <div id="intro-animation" class="container-fluid">
     <h1>Snap Paddy</h1>
     <div id="running-leprechaun">
         <h2>Nya ha ha..</h2>
