--- a/snappaddy/templates/show_snap.html
+++ b/snappaddy/templates/show_snap.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block content %}
+<div class="corner-frame top-left">
+    <img src="{% static 'img/corner-tl.png' %}" alt="shamrock corner frame">
+</div>
 <div class="row">
     <div class="col-12">
         <div class="card mt-3" id="greeting-card-snap" class="greeting-card">
@@ -11,13 +14,10 @@
             </div>
             <div id="greeting-card-text" class="greeting-card text-center text-dark d-flex justify-content-center">
                 <div id="inner-card-content" class="d-block fw-bold">
-                    <p class="my-2 fs-3">
-                        Happy 
-                        <br>
-                        St. Patrick's Day 2021!
+                    <p class="my-2 fs-3"> Happy St. Patrick's Day 2021!
                     </p>
                     <div class="social-share my-3">
-                        <p>Share your Paddy Snap!</p>
+                        <p>Share your Paddy Snap with friends<span>!</span></p>
 
                         <!-- insert template tag for snap id after url ==> u=https%3A//snap-paddy.herokuapp.com/show/ =>123456789<= -->
                         <a class="btn btn-outline-primary btn-lg"
@@ -48,6 +48,9 @@
                 </button></a>
         </div>
     </div>
+</div>
+<div class="corner-frame bottom-right">
+    <img src="{% static 'img/corner-br.png' %}" alt="shamrock corner frame">
 </div>
 
 {% endblock %}
