--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -42,6 +42,15 @@ body {
     letter-spacing: .8rem;
 }
 
+#main-body {
+    width: 100%;
+    height: 100%;
+}
+
+.dark-text {
+    color: var(--dark-text);
+}
+
 h1,
 h2,
 h3,
@@ -85,7 +94,7 @@ button {
     right: -1%;
 }
 
-/* === ANIMATIONS === */
+/* === INTRO ANIMATIONS === */
 
 #intro-animation {
     top: 0;
@@ -98,15 +107,6 @@ button {
     justify-content: center;
     align-items: center;
     z-index: 10;
-}
-
-#main-body {
-    width: 100%;
-    height: 100%;
-}
-
-.dark-text {
-    color: var(--dark-text);
 }
 
 #intro-animation h1 {
@@ -191,6 +191,17 @@ button {
     }
 }
 
+/* === END INTRO ANIMATIONS === */
+
+
+/* === GREETING CARD === */
+
+.card 
+{
+    min-width: 600px;
+    min-height: 600px;
+}
+
 #greeting-card,
 #greeting-card-snap {
     width: 600px;
@@ -201,19 +212,37 @@ button {
     transform: perspective(1000px);
     box-shadow: 10px 20px 40px var(--light-shadow);
     transition: all 1s ease-in-out;
-    animation: afterSnapSlide 2.2s;
+    animation: fadeInCard 3s forwards;
+}
+
+@keyframes fadeInCard
+{
+    0%
+    {
+        opacity: 0;
+    }
+    100%
+    {
+        opacity: 1;
+    }
+}
+
+/* Slide Card on Open after SNAP taken */
+#greeting-card-snap
+{
+    animation: afterSnapSlide 2.2s forwards;
+    animation-delay: .6s;
 }
 
 @keyframes afterSnapSlide {
 
-    0%,
-    20% {
+    0%
+    {
+        transform: translateX(0);
+    }
+    100% {
         transform: translateX(50%);
     }
-}
-
-#greeting-card-snap:hover {
-    transform: translateX(50%);
 }
 
 /* === CARD CUTOUTS === */
@@ -283,21 +312,7 @@ i {
     display: none;
 }
 
-/* ANIMATION SHOWS CARD AFTER SNAP TAKEN */
-@keyframes afterSnap {
 
-    0%,
-    20% {
-        transform: rotateY(-180deg);
-    }
-}
-
-/* OPEN CARD ON HOVER */
-#greeting-card-snap:hover #greeting-card-cover {
-    transform: rotateY(-180deg);
-}
-
-/* END ANIMATIONS */
 
 /* ===OUTER CARD CONTENT=== */
 #greeting-card-cover {
@@ -312,7 +327,17 @@ i {
     transform-style: preserve-3d;
     transition: all 1s ease-in-out;
     z-index: 5;
-    animation: afterSnap 2.2s;
+    animation: afterSnap 2.2s forwards;
+    animation-delay: .6s;
+}
+
+/* ANIMATION OPENS CARD AFTER SNAP TAKEN */
+@keyframes afterSnap {
+
+    100%
+    {
+        transform: rotateY(-180deg);
+    }
 }
 
 .shamrock-icon {
