--- a/snappaddy/templates/paddy_snap.html
+++ b/snappaddy/templates/paddy_snap.html
@@ -6,8 +6,8 @@
 
 <!-- COMMENTED OUT THE INTRO ANIMATION FOR NOW -->
 
-<!-- <div id="intro-animation" class="container-fluid">
-    <h1>Snap Paddy</h1>
+<div id="intro-animation" class="container-fluid">
+    <h1>Paddy Snap</h1>
     <div id="running-leprechaun">
         <h2>Nya ha ha..</h2>
         <img src="/static/img/leprechaun_gold.gif" alt="leprechaun running with bag of gold">
@@ -15,43 +15,46 @@
     <div id="chasing-paddy">
         <img src="/static/img/paddy_chasing.webp" alt="paddy running">
     </div>
-</div>     -->
+</div>    
 
-<div class="row">
-    <div class="col-12">
-        <div class="card mt-3" id="greeting-card" class="greeting-card">
-            <div id="greeting-card-cutout" class="greeting-card"></div>
-            <div class="camera" id="greeting-card-camera">
-                <video id="video" autoplay="true">Video stream not available.</video>
+<div class="has-greeting-card">
+    <div class="row">
+        <div class="col-12">
+            <div class="card" id="greeting-card" class="greeting-card">
+                <div id="greeting-card-cutout" class="greeting-card"></div>
+                <div class="camera" id="greeting-card-camera">
+                    <video id="video" autoplay="true">Video stream not available.</video>
+                </div>
+                <canvas id="greeting-card-canvas"></canvas>
+                <div class="greeting-card">
+                    <img id="greeting-card-image">
+                </div>
             </div>
-            <canvas id="greeting-card-canvas"></canvas>
-            <div class="greeting-card">
-                <img id="greeting-card-image">
-            </div>
+        </div>
+        <div id="snap-buttons" class="col text-center">
+            <button id="startbutton" class="">
+                <i class="fas fa-camera"></i>
+            </button>
+    
+            <form method="POST" action="save/" id="snapForm" class="text-center">
+                {% csrf_token %}
+                <input type="hidden" name="cutout" id="input-cutout">
+                <input type="hidden" name="snap-file" id="input-snap-file">
+                <button id="snapbutton" class="">
+                    <i class="fas fa-palette"></i>
+                </button>
+            </form>
+    
+            <button id="clearbutton" class="">
+                <i class="fas fa-redo"></i>
+            </button>
+    
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col text-center">
-        <button id="startbutton" class="btn btn-primary">
-            <i class="fas fa-camera-retro"></i><span class="pl-3">Take photo</span>
-        </button>
-
-        <form method="POST" action="save/" id="snapForm" class="text-center">
-            {% csrf_token %}
-            <input type="hidden" name="cutout" id="input-cutout">
-            <input type="hidden" name="snap-file" id="input-snap-file">
-            <button id="snapbutton" class="btn btn-warning">
-                <i class="fas fa-palette"></i>Show Card
-            </button>
-        </form>
-
-        <button id="clearbutton" class="btn btn-danger">
-            <i class="fas fa-redo"></i><span class="pl-3">Re-take photo</span>
-        </button>
-
-    </div>
+    
 </div>
 
 
@@ -61,7 +64,7 @@
 {% block js %}
 
 <!-- INTRO ANIMATIONS COMMENTED OUT FOR NOW -->
-<!-- <script>
+<script>
     let introAnim = document.getElementById('intro-animation');
 
     window.addEventListener('load', () => {
@@ -69,7 +72,7 @@
     introAnim.classList.add('hide');
     
   });
-</script> -->
+</script>
 <script>
 
 let width = 600;    // We will scale the photo width to this
