added id of main-body to base.html container

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     </head>
     <body>
-        <div class="container-fluid">
+        <div id="main-body" class="container-fluid">
             <div class="corner-frame top-left">
                 <img src="{% static 'img/corner-tl.png' %}" alt="shamrock corner frame">
             </div>
