added sliding animation for tablet/phone devices

--- a/snappaddy/templates/show_snap.html
+++ b/snappaddy/templates/show_snap.html
@@ -2,48 +2,50 @@
 {% load static %}
 
 {% block content %}
-<div class="row">
-    <div class="col-12">
-        <div class="card mt-3" id="greeting-card-snap" class="greeting-card">
-            <div id="greeting-card-cover" class="greeting-card">
-                <div id="greeting-card-cutout" class="greeting-card"></div>
-                <img id="greeting-card-image" class="show" src="{{snap.base64image}}">
-            </div>
-            <div id="greeting-card-text" class="greeting-card text-center text-dark d-flex justify-content-center">
-                <div id="inner-card-content" class="d-block fw-bold">
-                    <p class="my-2 fs-3"> Happy St. Patrick's Day 2021!
-                    </p>
-                    
+<div id="show-snap-wrap">
+    <div class="row">
+        <div class="col-12">
+            <div class="card mt-3" id="greeting-card-snap" class="greeting-card">
+                <div id="greeting-card-cover" class="greeting-card slide-cover">
+                    <div id="greeting-card-cutout" class="greeting-card"></div>
+                    <img id="greeting-card-image" class="show" src="{{snap.base64image}}">
+                </div>
+                <div id="greeting-card-text" class="greeting-card text-center text-dark d-flex justify-content-center">
+                    <div id="inner-card-content" class="d-block fw-bold">
+                        <p class="my-2 fs-3"> Happy St. Patrick's Day 2021!
+                        </p>
+                        
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="social-share">
-    <i class="fas fa-share-alt"></i>
-    <p>Share your Paddy Snap with friends<span>!</span></p>
-</div>
-<div class="another-snap">
-    <a href="{% url 'index' %}" >
-        <button id="take-new-snap" class="dark-text">
-            <i class="fas fa-camera"></i>
+    <div class="social-share">
+        <i class="fas fa-share-alt"></i>
+        <p>Share your Paddy Snap with friends<span>!</span></p>
+    </div>
+    <div class="another-snap">
+        <a href="{% url 'index' %}" >
+            <button id="take-new-snap" class="dark-text">
+                <i class="fas fa-camera"></i>
+            </button>
+        </a>
+        <!-- insert template tag for snap id after url ==> u=https%3A//snap-paddy.herokuapp.com/show/ =>123456789<= -->
+        <a class="" href="https://www.facebook.com/sharer/sharer.php?u={{host}}show/{{snap.uuid}}"
+        target="blank">
+        <button id="share-to-facebook">
+            <i class="fab fa-facebook fa-lg mx-2"></i>
         </button>
-    </a>
-    <!-- insert template tag for snap id after url ==> u=https%3A//snap-paddy.herokuapp.com/show/ =>123456789<= -->
-    <a class="" href="https://www.facebook.com/sharer/sharer.php?u={{host}}show/{{snap.uuid}}"
-    target="blank">
-    <button id="share-to-facebook">
-        <i class="fab fa-facebook fa-lg mx-2"></i>
-    </button>
-    </a>
-
-    <!-- insert template tag for snap id after url ==> https%3A//snap-paddy.herokuapp.com/ =>123456789<= -->
-    <a class="" 
-    href="https://twitter.com/intent/tweet?text=Checkout%20my%20awesome%20St%20Patrick's%20day%20themed%20photobooth%20snap!%20%0A{{host}}show/{{snap.uuid}}%0A%23hackathon%20%23codeinstitute"
-    target="blank">
-    <button id="share-to-twitter">
-    <i class="fab fa-twitter fa-lg mx-2"></i>
-    </button>
-    </a>
+        </a>
+    
+        <!-- insert template tag for snap id after url ==> https%3A//snap-paddy.herokuapp.com/ =>123456789<= -->
+        <a class="" 
+        href="https://twitter.com/intent/tweet?text=Checkout%20my%20awesome%20St%20Patrick's%20day%20themed%20photobooth%20snap!%20%0A{{host}}show/{{snap.uuid}}%0A%23hackathon%20%23codeinstitute"
+        target="blank">
+        <button id="share-to-twitter">
+        <i class="fab fa-twitter fa-lg mx-2"></i>
+        </button>
+        </a>
+    </div>
 </div>
 {% endblock %}
